# convexSet

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  points
include/: DataTypes.hpp  MathLine.hpp  MessageSender.hpp  Point.hpp  SearchConvexSet.hpp  draw.hpp
scripts/: draw.py  graph.py  line_draw.py
src/: MathLine.cpp  MessageSender.cpp  Point.cpp  SearchConvexSet.cpp  draw.cpp  main.cpp  main_draft.cpp  main_test.cpp  testHull.cpp
